<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="8dp"
        android:background="#fff9ea">

        <Chronometer
            android:id="@+id/chronometer_bulb"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>
        <Chronometer
            android:id="@+id/chronometer_ac"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>
        <Chronometer
            android:id="@+id/chronometer_fan"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>
        <Chronometer
            android:id="@+id/chronometer_tv"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>
        <ImageView
            android:id="@+id/bulb_icon"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/bulb">
        </ImageView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/bulb_icon"
            android:orientation="vertical">
            <TextView
                android:id="@+id/name_bulb"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="bottom"
                android:text="@string/light_bulb"
                android:textStyle="italic"
                android:fontFamily="sans-serif-medium"
                android:textColor="#4c3b0e"
                android:textSize="24sp">
            </TextView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/power_bulb"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    tools:text="@string/power"
                    android:textStyle="italic"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="#4c3b0e"
                    android:textSize="16sp"
                    android:gravity="top">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/watt"
                    android:textStyle="italic"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="#4c3b0e"
                    android:textSize="16sp"
                    android:gravity="top">
                </TextView>
            </LinearLayout>
        </LinearLayout>
        <Switch
            android:id="@+id/switch_bulb"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:theme="@style/SwitchTheme"
            android:layout_alignParentEnd="true">
        </Switch>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="8dp"
        android:background="#fff9ea">
        <ImageView
            android:id="@+id/ac_icon"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ac">
        </ImageView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/ac_icon"
            android:orientation="vertical">
            <TextView
                android:id="@+id/name_ac"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="bottom"
                android:text="@string/air_conditioner"
                android:textStyle="italic"
                android:fontFamily="sans-serif-medium"
                android:textColor="#4c3b0e"
                android:textSize="24sp">
            </TextView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/power_ac"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    tools:text="@string/_2_kw"
                    android:textStyle="italic"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="#4c3b0e"
                    android:textSize="16sp"
                    android:gravity="top">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/watt"
                    android:textStyle="italic"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="#4c3b0e"
                    android:textSize="16sp"
                    android:gravity="top">
                </TextView>
            </LinearLayout>
        </LinearLayout>
        <Switch
            android:id="@+id/switch_ac"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:theme="@style/SwitchTheme"
            android:layout_alignParentEnd="true">
        </Switch>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="8dp"
        android:background="#fff9ea">
        <ImageView
            android:id="@+id/fan_icon"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/fan">
        </ImageView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/fan_icon"
            android:orientation="vertical">
            <TextView
                android:id="@+id/name_fan"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="bottom"
                android:text="@string/fan"
                android:textStyle="italic"
                android:fontFamily="sans-serif-medium"
                android:textColor="#4c3b0e"
                android:textSize="24sp">
            </TextView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/power_fan"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    tools:text="@string/_75_w"
                    android:textStyle="italic"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="#4c3b0e"
                    android:textSize="16sp"
                    android:gravity="top">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/watt"
                    android:textStyle="italic"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="#4c3b0e"
                    android:textSize="16sp"
                    android:gravity="top">
                </TextView>
            </LinearLayout>
        </LinearLayout>
        <Switch
            android:id="@+id/switch_fan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:theme="@style/SwitchTheme"
            android:layout_alignParentEnd="true">
        </Switch>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="8dp"
        android:background="#fff9ea">
        <ImageView
            android:id="@+id/tv_icon"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/tv">
        </ImageView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/tv_icon"
            android:orientation="vertical">
            <TextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="bottom"
                android:text="@string/tv"
                android:textStyle="italic"
                android:fontFamily="sans-serif-medium"
                android:textColor="#4c3b0e"
                android:textSize="24sp">
            </TextView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/power_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    tools:text="@string/_100"
                    android:textStyle="italic"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="#4c3b0e"
                    android:textSize="16sp"
                    android:gravity="top">
                </TextView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@string/watt"
                    android:textStyle="italic"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="#4c3b0e"
                    android:textSize="16sp"
                    android:gravity="top">
                </TextView>
            </LinearLayout>
        </LinearLayout>
        <Switch
            android:id="@+id/switch_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:theme="@style/SwitchTheme"
            android:layout_alignParentEnd="true">
        </Switch>
    </RelativeLayout>
</LinearLayout>