<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FEFBDE"
        android:orientation="vertical" >

        <androidx.cardview.widget.CardView
            android:id="@+id/living_room"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="4dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/living_room"
                android:backgroundTint="#FEFBDE"
                android:backgroundTintMode="multiply">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape"
                    android:layout_margin="8dp"
                    android:text="@string/living_room"
                    android:fontFamily="cursive"
                    android:textColor="#ffe298"
                    android:textSize="24sp"
                    android:textStyle="bold">
                </TextView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/kitchen"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="4dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/kitchen"
                android:backgroundTint="#FEFBDE"
                android:backgroundTintMode="multiply">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/shape"
                    android:text="@string/kitchen"
                    android:fontFamily="cursive"
                    android:textColor="#ffe298"
                    android:textSize="24sp"
                    android:textStyle="bold">
                </TextView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/bedroom1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="4dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bedroom_1"
                android:backgroundTint="#FEFBDE"
                android:backgroundTintMode="multiply">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/shape"
                    android:text="@string/bedroom_1"
                    android:fontFamily="cursive"
                    android:textColor="#ffe298"
                    android:textSize="24sp"
                    android:textStyle="bold">
                </TextView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/bedroom2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="4dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bedroom_2"
                android:backgroundTint="#FEFBDE"
                android:backgroundTintMode="multiply">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/shape"
                    android:text="@string/bedroom_2"
                    android:fontFamily="cursive"
                    android:textColor="#ffe298"
                    android:textSize="24sp"
                    android:textStyle="bold">
                </TextView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/bathroom"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="4dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bathroom"
                android:backgroundTint="#FEFBDE"
                android:backgroundTintMode="multiply">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/shape"
                    android:text="@string/bathroom"
                    android:fontFamily="cursive"
                    android:textColor="#ffe298"
                    android:textSize="24sp"
                    android:textStyle="bold">
                </TextView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/lobby"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="4dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/lobby"
                android:backgroundTint="#FEFBDE"
                android:backgroundTintMode="multiply">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/shape"
                    android:text="@string/lobby"
                    android:fontFamily="cursive"
                    android:textColor="#ffe298"
                    android:textSize="24sp"
                    android:textStyle="bold">
                </TextView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>
</ScrollView>